--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,21 +8,22 @@ body {
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
+.small-para {
+  font-size: 14px;
+  /*font-weight: 800;*/
+}
+
+#confirm-buttom {
   background: green;
   color: white;
   font-weight: bold;
 } 
 
+/*
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
@@ -34,9 +35,10 @@ body {
   font-weight: 800;
   font-size: 14px;
 }
-
-div.text {
+*/
+div.child {
   color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+  font-size: 14px;
+  font-weight: 800;
 }
+
